--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
+  welcome to the website
 </head>
 
 <body>
