--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
   <!-- Add your site or application content here -->
   <p>Arjun has a faster desert temple time than me :P </p>
   <script src="js/app.js"></script>
+  <body>
+  <header class="site-header">
+    <h1>Welcome to my website</h1>
+  </header>
+
+  <p>Arjun has a faster desert temple time than me :P </p>
+  <script src="js/app.js"></script>
+  </body>
 
 </body>
 
