--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <h1>Welcome to my website</h1>
   </header>
 
-  <p>Arjun has a faster desert temple time than me :P </p>
+  <p>Arjun has a faster <a href="https://www.kodub.com/apps/polytrack">
+    desert temple </a> time than me :P </p>
   <script src="js/app.js"></script>
   </body>
 
