--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h1>Welcome to my website</h1>
   </header>
 
-  <p>Arjun has a faster <a href="https://www.kodub.com/apps/polytrack">
+  <p>Arjun has a faster <a target="_blank" href="https://www.kodub.com/apps/polytrack">
     desert temple </a> time than me :P </p>
   <script src="js/app.js"></script>
   </body>
