--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
   <script src="js/app.js"></script>
   <body>
   <header class="site-header">
-    <h1>Welcome to my website</h1>
+    <h1>Welcome to the Polytrack Leaderboard</h1>
   </header>
 
-  <p>Arjun has a faster <a target="_blank" href="https://www.kodub.com/apps/polytrack">
-    desert temple </a> time than me :P </p>
+  <p>Link to <a target="_blank" href="https://www.kodub.com/apps/polytrack">
+    polytrack </a> </p>
   <script src="js/app.js"></script>
   </body>
 
